--- a/pages/productos.html
+++ b/pages/productos.html
@@ -4,67 +4,88 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" href="../css/main.css">
     <title>Productos BullShoes</title>
 </head>
 <body>
     <header>
         <h1>BullShoes</h1>
-        <nav>
-            <ul>
-                <li><a href="../index.html">Inicio</a></li>
-                <li><a href="ofertas.html">Ofertas</a></li>
-                <li><a href="qsomos.html">¿Quienes somos?</a></li>
-                <li><a href="productos.html">Productos</a></li>
-                <li><a href="contacto.html">Contacto</a></li>
-            </ul>
+        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+          <div class="container-fluid">
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                  <a class="nav-link active" aria-current="page" href="../index.html">Inicio</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="../pages/ofertas.html">Ofertas</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="../pages/qsomos.html">¿Quienes somos?</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="../pages/productos.html">Productos</a>
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link" href="../pages/contacto.html">Contacto</a>
+                </li>
+              </ul>
+            </div>
+          </div>
         </nav>
     </header>
     <main class="mProduc">
+      <!-- Productos -->
         <div class="menuProductos">
-            <div class="producto">
-              <a href="producto1.html">
-                <img src="../img/zap1.jpg" alt="Producto 1">
-              </a>
-                <h3>Producto 1</h3>
-                <p>Descripción del producto 1</p>
+          <div class="card" style="width: 18rem;">
+            <img src="../img/zap1.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Producto 1</h5>
+              <p class="card-text">Descripción: Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deleniti optio molestiae odit commodi, ducimus beatae magni laborum porro rem aliquam libero tempora saepe error minima repudiandae minus, blanditiis facere mollitia!</p>
+              <a href="../pages/productos/zap1.html" class="btn btn-primary">Comprar</a>
             </div>
-            <div class="producto">
-              <a href="producto2.html">
-                <img src="../img/zap2.jpg" alt="Producto 2">
-              </a>
-                <h3>Producto 2</h3>
-                <p>Descripción del producto 2</p>
-            </div>
-            <div class="producto">
-                <a href="producto3.html">
-                  <img src="../img/zap2.jpg" alt="Producto 3">
-                </a>
-                  <h3>Producto 3</h3>
-                  <p>Descripción del producto 3</p>
-              </div>
-              <div class="producto">
-                <a href="producto4.html">
-                  <img src="../img/zap2.jpg" alt="Producto 4">
-                </a>
-                  <h3>Producto 4</h3>
-                  <p>Descripción del producto 4</p>
-              </div>
-              <div class="producto">
-                <a href="producto5.html">
-                  <img src="../img/zap2.jpg" alt="Producto 5">
-                </a>
-                  <h3>Producto 5</h3>
-                  <p>Descripción del producto 5</p>
-              </div>
-              <div class="producto">
-                <a href="producto6.html">
-                  <img src="../img/zap2.jpg" alt="Producto 6">
-                </a>
-                  <h3>Producto 6</h3>
-                  <p>Descripción del producto 6</p>
-              </div>
           </div>
+          <div class="card" style="width: 18rem;">
+            <img src="../img/zap1.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Producto 2</h5>
+              <p class="card-text">Descripción: Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deleniti optio molestiae odit commodi, ducimus beatae magni laborum porro rem aliquam libero tempora saepe error minima repudiandae minus, blanditiis facere mollitia!</p>
+              <a href="#" class="btn btn-primary">Comprar</a>
+            </div>
+          </div>
+          <div class="card" style="width: 18rem;">
+            <img src="../img/zap1.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Producto 3</h5>
+              <p class="card-text">Descripción: Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deleniti optio molestiae odit commodi, ducimus beatae magni laborum porro rem aliquam libero tempora saepe error minima repudiandae minus, blanditiis facere mollitia!</p>
+              <a href="#" class="btn btn-primary">Comprar</a>
+            </div>
+          </div>
+          <div class="card" style="width: 18rem;">
+            <img src="../img/zap1.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Producto 4</h5>
+              <p class="card-text">Descripción: Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deleniti optio molestiae odit commodi, ducimus beatae magni laborum porro rem aliquam libero tempora saepe error minima repudiandae minus, blanditiis facere mollitia!</p>
+              <a href="#" class="btn btn-primary">Comprar</a>
+            </div>
+          </div>
+          <div class="card" style="width: 18rem;">
+            <img src="../img/zap1.jpg" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Producto 5</h5>
+              <p class="card-text">Descripción: Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deleniti optio molestiae odit commodi, ducimus beatae magni laborum porro rem aliquam libero tempora saepe error minima repudiandae minus, blanditiis facere mollitia!</p>
+              <a href="#" class="btn btn-primary">Comprar</a>
+            </div>
+          </div>
+            <div class="card" style="width: 18rem;">
+              <img src="../img/zap1.jpg" class="card-img-top" alt="...">
+              <div class="card-body">
+                <h5 class="card-title">Producto 6</h5>
+                <p class="card-text">Descripción: Lorem ipsum dolor sit, amet consectetur adipisicing elit. Deleniti optio molestiae odit commodi, ducimus beatae magni laborum porro rem aliquam libero tempora saepe error minima repudiandae minus, blanditiis facere mollitia!</p>
+                <a href="#" class="btn btn-primary">Comprar</a>
+              </div>
+            </div>
     </main>
     <footer>
         <div class="pie">
